[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Font_50.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Fonts/Frick0.3-Regular.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 120
outline_size = 20
outline_color = Color( 0.231373, 0.231373, 0.231373, 1 )
font_data = ExtResource( 3 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Container" type="Node2D" parent="."]

[node name="CL" type="CanvasLayer" parent="."]

[node name="HBox" type="HBoxContainer" parent="CL"]
margin_right = 1924.0
margin_bottom = 205.0

[node name="VBoxLeft" type="VBoxContainer" parent="CL/HBox"]
margin_right = 960.0
margin_bottom = 205.0
rect_min_size = Vector2( 960, 0 )

[node name="VBoxRight" type="VBoxContainer" parent="CL/HBox"]
margin_left = 964.0
margin_right = 1924.0
margin_bottom = 205.0
rect_min_size = Vector2( 960, 0 )

[node name="Popup" type="Panel" parent="CL"]
visible = false
margin_left = 311.0
margin_top = 115.0
margin_right = 1593.0
margin_bottom = 942.0

[node name="Title" type="Label" parent="CL/Popup"]
margin_left = 14.3182
margin_top = 22.0
margin_right = 1279.32
margin_bottom = 115.0
custom_fonts/font = SubResource( 1 )
text = "Spelunky"
align = 1
valign = 1

[node name="Details" type="Label" parent="CL/Popup"]
margin_top = 193.0
margin_right = 1276.0
margin_bottom = 822.0
custom_fonts/font = ExtResource( 2 )
text = "My ability:"
autowrap = true

[node name="CloseButton" type="TextureButton" parent="CL/Popup"]
margin_left = 1158.19
margin_top = 3.05176e-05
margin_right = 1280.19
margin_bottom = 122.0
